--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DaoCityTokyoTorch</title>
+    <title>About tghis project</title>
 </head>
 <body>
-    <h1>Dao city</h1>
+    
 </body>
 </html>
